Continuação do Básico em Angular

--- a/Primeiro-Projeto/src/app/app.component.html
+++ b/Primeiro-Projeto/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h1>Hello World Angular!</h1>
-<app-first-component></app-first-component>
-<app-parents-data [name]="userName" [userData]="userData"></app-parents-data>
-<app-directives></app-directives>
+<h1>Hello World Angular!</h1> 
+ <app-first-component></app-first-component> <!--Criando o primeiro componenet-->
+<app-parents-data [name]="userName" [userData]="userData"></app-parents-data>  <!--Compartilhamento de dados entre componentes pai e filho @Input-->
+<app-directives></app-directives>  <!--Criando e testando diretivas-->
+<app-if-render></app-if-render>  <!--Aprendendo renderização condicional com If e Else-->
+<app-eventos></app-eventos>  <!--Criando eventos com o Click-->
+<app-emitter></app-emitter> <!--------Vai realizar uma determinada função após receber uma informação emitida pelo componente filho @Output------->
