--- a/Primeiro-Projeto/src/styles.css
+++ b/Primeiro-Projeto/src/styles.css
@@ -3,3 +3,13 @@
     padding: 1;
     font-family: Helvcetica;
 }
+
+body{
+    padding-bottom: 500px;
+}
+
+.class{
+    border: 1px solid red;
+    padding: 2em;
+    margin-bottom: 1em;
+}
